Subdued backlink styling and fixed several truncation bugs

--- a/styles.css
+++ b/styles.css
@@ -66,18 +66,27 @@ If your plugin does not need CSS, delete this file.
 }
 
 .backlink-span {
-	background-color: color-mix(in srgb, var(--color-base-30) 50%, var(--color-base-40) 50%) ;
-	border-radius: 3px;
-	padding-left: 3px;
-	color: var(--text-normal);
+	border: 1px solid var(--background-modifier-border);
+	border-radius: 4px;
+	padding: 4px 8px;
+	color: var(--text-muted);
+	line-height: var(--line-height-tight);
+	font-size: var(--font-small);
+	transform: translateY(calc(-1 * (4px + 1px))); /* undo padding and border */
+	max-width: 300px;
 }
 
 .backlink-span:hover {
-	background-color: hsl(calc(var(--accent-h) - 3), calc(var(--accent-s) * 1.02), calc(var(--accent-l) * 1.3));
+	background-color: var(--background-modifier-hover);
 }
 
 .backlink-span::after {
 	display:none !important
+}
+
+.backlink-span .text-accent {
+	color: var(--text-faint);
+	padding-right: 1px;
 }
 
 
